--- a/common/models/application-user.json
+++ b/common/models/application-user.json
@@ -17,6 +17,10 @@
     "image_url": {
       "type": "string",
       "required": true
+    },
+    "user_type_business": {
+      "type": "boolean",
+      "required": true
     }
   },
   "validations": [],
