Changed the foreign key for bids in application-user model

--- a/common/models/application-user.json
+++ b/common/models/application-user.json
@@ -38,7 +38,7 @@
     "bids": {
       "type": "hasMany",
       "model": "bid",
-      "foreignKey": "job_id"
+      "foreignKey": "user_id"
     }
   },
   "acls": [],
